force-app/src/objects/OrderApi__Tax_Locale__c.object
<CustomObject>
    <description>Along with the Item Class and Item, this object is used to help calculate the tax rate for taxable items.  This object defines the Tax GL Account and Tax Locales for Tax Classes.</description>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Tax Locale to a Business Group.</description>
        <inlineHelpText>Links the Tax Locale to a Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Tax Locales</relationshipLabel>
        <relationshipName>Tax_Locales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Locale_Values_CSV__c</fullName>
        <description>Enter the possible values for the field defined in the Tax Locale Field using comma separated values.</description>
        <inlineHelpText>Enter the possible values for the field defined in the Tax Locale Field using comma separated values.</inlineHelpText>
        <label>Locale Values (CSV)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field defines the tax liability account to be used as the credit entry of the Order&apos;s Transaction. Populated as the income account on the Tax Item by Default.</description>
        <inlineHelpText>This field defines the tax liability account to be used as the credit entry of the Order&apos;s Transaction. Populated as the income account on the Tax Item by Default.</inlineHelpText>
        <label>Default Tax Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Tax Locales</relationshipLabel>
        <relationshipName>Tax_Locales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Locale_Field__c</fullName>
        <description>In this field, enter the API name of the Sales Order Line field the system is to evaluate for the tax locale. (Ex. OrderApi__Shipping_Country__c)</description>
        <inlineHelpText>In this field, enter the API name of the Sales Order Line field the system is to evaluate for the tax locale. (Ex. OrderApi__Shipping_Country__c)</inlineHelpText>
        <label>Tax Locale Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tax Locale</label>
    <nameField>
        <label>Tax Locale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>